--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,10 +1,10 @@
 {
 	"version": 2,
-	"builds": [{ "src": "./public/index.js", "use": "@vercel/node" }],
+	"builds": [{ "src": "public/index.js", "use": "@vercel/node" }],
 	"routes": [
 		{
 			"src": "/(.*)",
-			"dest": "./public/index.js"
+			"dest": "public/index.js"
 		}
 	]
 }
